Save button in availability tabs stays in specific tab. Fixed shift bounce bug

--- a/scss/_block_days.scss
+++ b/scss/_block_days.scss
@@ -14,4 +14,14 @@
 		border-top: 1px solid $wg-gray-border;
 		background-color: $wg-cream;
 	}
+	.item-divider {
+		text-align: center;
+		border-top: 1px solid #ddd;
+	}
+	.total-time-off {
+		margin-top: 10px;
+		h1, p {
+			color: $wg-gray-text;
+		}
+	}
 }
